# ann-market

./: .gitignore  README.md  ag_news.py  hack_hdf5.py  pyproject.toml
configs/: .git.swp  ag_news.yaml  base.yaml  deep1m.yaml  gist1m.yaml  msmarco.yaml  sift1m.yaml
models/: difficulty_v1.onnx.data  qnet_distilled_v1.onnx  qnet_distilled_v1.onnx.data  qnet_distilled_v1.pt  qnet_naive_dqn_v1.pt
models/ag_news/: difficulty_v1.onnx  difficulty_v1.pt  qnet_distilled_v1.pt  qnet_naive_dqn_v1.pt
models/deep1m/: difficulty_v1.onnx  difficulty_v1.onnx.data  difficulty_v1.pt  qnet_distilled_v1.pt  qnet_naive_dqn_v1.pt
models/gist1m/: difficulty_v1.onnx  difficulty_v1.onnx.data  difficulty_v1.pt  qnet_distilled_v1.pt  qnet_naive_dqn_v1.pt
models/sift1m/: difficulty_v1.onnx  difficulty_v1.onnx.data  difficulty_v1.pt  qnet_distilled_v1.pt  qnet_naive_dqn_v1.pt
reports/: main_results.csv  week1_notes.md  问题答案和论文解读.md
scripts/: analysis_w1.py  build_index.py  calibrate_anchors.py  calibrate_buyer.py  compare_bandit.py  download_data.py  download_sift1m.sh  eval_dr_qnet.py  plot_w6_results.py  pretrain_difficulty.py  rebuild_csv.py  run_ablation.py  run_experiment.py  run_main_experiment.py  train_qnet.py  train_qnet_bak.py  validate_dr.py
src/agents/: bandit_policy.py  cost_based_policy.py  difficulty_estimator.py  execution_agent.py  policy_agent.py  (+5 more)
tests/: test_bandit.py  test_dr_estimator.py  test_end_to_end.py  test_latency.py  test_propensity.py  test_q_learning_policy.py  test_q_net_losses.py  test_run_ablation.py  test_run_experiment.py  test_shadow_unbiased.py
(+10 files in other folders)
