[project]
name = "ann-marketplace"
version = "0.1.0"
description = "Causal Bellman ANN serving marketplace (SIGMOD prototype)"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.26",
    "faiss-cpu>=1.7.4",
    "torch>=2.2",
    "pyarrow>=15.0",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "h5py>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "py-spy>=0.3",
    "ipykernel>=6.29",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
